# FastAPI

./: README.md  greet_async.py  hello.py  init.sh  kkam_db  pyproject.toml  test.py  typing-exam.py
app/: error.py  main.py
app/data/: creature.py  explorer.py  init.py  user.py
app/db/: cryptid.db
app/fake/: creature.py  explorer.py  user.py
app/model/: creature.py  explorer.py  user.py
app/service/: creature.py  explorer.py  user.py
app/web/: creature.py  explorer.py  user.py
docs/: auth.py
docs/dependency/: dependency.py  user_dependency.py
docs/exam/: header_exam.py  path_parameter_exam.py  request_body_exam.py
docs/exam/async/: basic.py  greet_async_uvicorn.py
docs/model_service_web/service/: tag.py
docs/model_service_web/web/: tag.py
docs/pydantic/: data.py  model.py  test1.py  web.py
exam/: request_body_basemodel_exam.py  requests_exam.py  status_code_exam.py  typing_exam.py
test/full/: test_user.py
test/unit/data/: test_creature.py  test_creature_data.py  test_user.py
test/unit/mock/: mod2.py  test_summer1.py  test_summer2.py  test_summer_fake.py
test/unit/service/: test_creature.py  test_creature_service.py  test_user.py
test/unit/web/: test_explorer.py  test_user.py
web/: tag.py
