[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = "Learning FastAPI Project"
authors = ["KKamji <xowl5460@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
httpie = "^3.2.3"
requests = "2.31.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
